--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>MRCYBER</title>
+        <title>NUCL3OUS</title>
         <link rel="stylesheet" href="/assets/css/index.css" type="text/css" />
         <link rel="shortcut icon" href="/assets/images/favicon.png" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="logotype">
                 <a href="https://vk.com/quw3ry" class="logotype-link">
-                    MRCYBER
+                    NUCL3OUS
                 </a>
             </div>
 
