--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <a href="/dolma.makeit/" class="nav-item-link">
                     Образец "По макету"
                 </a>
+
+                <a href="/webdev-2stage/" class="nav-item-link">
+                    2 этап конкурса
+                </a>
             </div>
         </div>
     </body>
