invest some updates

--- a/investitions-proj/index.html
+++ b/investitions-proj/index.html
@@ -26,6 +26,7 @@
 				<a href="cabinet.html" class="mobmenu-link">Личный кабинет</a>
 				<a href="auth.html" class="mobmenu-link">Авторизация</a>
 				<a href="contacts.html" class="mobmenu-link">Контакты</a>
+				<a href="ostatok.html" class="mobmenu-link">Остаток по Т/З</a>
 			</div>
 		</div>
 
