--- a/investitions-proj/index.html
+++ b/investitions-proj/index.html
@@ -31,6 +31,10 @@
 		</div>
 
 		<div class="container">
+			<div class="cookies-using-container">
+				<marquee>Наш сайт использует файлы Cookie.</marquee>
+			</div>
+
 			<header>
 				<div class="logotype-container"></div>
 
@@ -103,7 +107,7 @@
 
 			<footer>
 				<div class="footer-copyright-container">
-					<marquee>Разработано в <script type="text/javascript">var mdate = new Date(); document.write(mdate.getFullYear());</script> Владиславом Долматом, 0k9391.</marquee>
+					Разработано в <script type="text/javascript">var mdate = new Date(); document.write(mdate.getFullYear());</script> Владиславом Долматом, 0k9391.
 				</div>
 			</footer>
 		</div>
