--- a/investitions-proj/index.html
+++ b/investitions-proj/index.html
@@ -32,7 +32,7 @@
 
 		<div class="container">
 			<div class="cookies-using-container">
-				<marquee>Наш сайт использует файлы Cookie.</marquee>
+				<marquee>Наш сайт не использует файлы Cookie.</marquee>
 			</div>
 
 			<header>
