--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     Сервис "Юный филолог"
                 </a>
 
-                <a href="https://tdonate.ru/" class="nav-item-link">
-                    Сервис приёма донатов
+                <a href="/investitions-proj/" class="nav-item-link">
+                    Итоговый сайт для занятий
                 </a>
 
                 <a href="https://alexandrdolmat.github.io" class="nav-item-link">
