--- a/qmeet-preview/index.html
+++ b/qmeet-preview/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Добро пожаловать! | qMeet</title>
-        <link rel="stylesheet" href="/assets/css/index.css" type="text/css">
-        <link rel="shortcut icon" href="/assets/media/qmeet-icon.png">
+        <link rel="stylesheet" href="assets/index.css" type="text/css">
+        <link rel="shortcut icon" href="assets/media/qmeet-icon.png">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="imagetoolbar" content="no" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta name="robots" content="all" />
-        <script type="text/javascript" src="/assets/js/mobile-menu.js"></script>
+        <script type="text/javascript" src="assets/js/mobile-menu.js"></script>
     </head>
     <body>
         <div id="mobCont" class="mobile-container">
