--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
                             <a href="https://alexandrdolmat.github.io/" class="prod-goto-btn">перейти</a>
                         </div>
                     </div>
+
+                    <div class="prod-item">
+                        <div class="prod-preview">
+                            <img src="assets/media/view/vma.png" class="prod-img">
+                        </div>
+
+                        <div class="prod-title">
+                            Virtuoso Minsk Art
+                        </div>
+
+                        <div class="prod-goto">
+                            <a href="view/vma/" class="prod-goto-btn">перейти</a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
