--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <div class="prod-item">
                         <div class="prod-preview">
-                            <img src="assets/media/view/vma.png" class="prod-img">
+                            <img src="assets/media/view/vma.PNG" class="prod-img">
                         </div>
 
                         <div class="prod-title">
